# Valuta

./: .editorconfig  4  README.md  ]  currency-converter.doap  io.github.idevecore.CurrencyConverter.Devel.json  io.github.idevecore.CurrencyConverter.json  io.github.idevecore.Valuta.Devel.json  io.github.idevecore.Valuta.json  meson.build  pypi-dependencies.json  valuta.doap
.flatpak-builder/ccache/0/: stats
.flatpak-builder/ccache/0/0/: 0cgtqa7d2gjkq4ibdml93tv43qha6keM  91na578m9nremnpqng2dnqqbepg9e44M  stats
.flatpak-builder/ccache/0/1/: d4berc3b2p03qngo476g2k5p7ceg5n4M
.flatpak-builder/ccache/0/2/: 4fl3qfvp1ncj31f8jqk2gdlrbaotpr2M  barae4spshsjp8eohsffffpqk6vrgusR  f7oio7s5dbdjf92a8os0q7tqakcrhr0R
.flatpak-builder/ccache/0/3/: 8bgd3pk0cuiq3qaci4e5bjsb4u3l4sqM  f77oi1f7d37100r45gmbeau84pro9i6M
.flatpak-builder/ccache/0/4/: 07viutotru09td4hd867io47k5e562gM  8d3b73d70dpflrtlmfgdl31e24vp48gR
.flatpak-builder/ccache/0/5/: 880b74f00steh5gdfm39nk3rh8vc1eqM  stats
.flatpak-builder/ccache/0/8/: 8ba3bnr5k861862b36jnue8mg9mdt92M  ec732c7nj0t9uor5v5vrsm25ep3t1rgR
.flatpak-builder/ccache/0/9/: 77ie494330iq03f9kq0404tkhf6d7f4R
.flatpak-builder/ccache/0/a/: 04ohib9nif9q6dq0jtv1m7qk01j1aaqR  08dbi7gk6cj9dklia4kr974vpfkcacoM  351sc02edd8gevvlpna7e2brb87gg5cR  51ooe7gpr00ddenkgfjrrlaolqjpubaR  stats
.flatpak-builder/ccache/0/c/: 236gr2hr7f1b1rrcne8j840uaght7keM  5fmnv9ehkmosue39gi610up3ejqat48M
.flatpak-builder/ccache/0/e/: 074l9op7u6mum0hqrju5c41frsft6k2R
.flatpak-builder/ccache/0/f/: 7bb397k512hbhqph28l2tm25r4u3pkuM  97cd5nl7ir43u5hejig2dpkek7h1e3uR  stats
.flatpak-builder/ccache/1/: stats
.flatpak-builder/ccache/1/0/: 0f0j1s71pmbh17uab6j8hdsumuut2suM  a6dm7jg836dpmr7gbvd23bb8uc66nnsM  c74u9vvr59u7a1vhtih8hovt2aae9eeR
.flatpak-builder/ccache/1/1/: 15p8ktf45oa26fd4a106psmpnedlhkmM  81oldr6be31luv8u5g4vntg5q8h33r6M
.flatpak-builder/ccache/1/2/: 7514cmalf7flkahcc0t4rkh3f7vo6tqM  af6415m2mrhtthntk3fc17b7m8kqlj2M  d87u6dqhp5qk248rtecroibodnkeqtgR
.flatpak-builder/ccache/1/3/: feqkc3b8t2tk1lij0969o4nd2326jfuM
.flatpak-builder/ccache/1/4/: 960e5ecn4va8uudgm41h79aj8175hj8R
.flatpak-builder/ccache/1/5/: 97sjmuvrnl3s9t828p3du741mc2gt60M  c2hos58dd62pcahv1fs9bl27sqje4jiR
.flatpak-builder/ccache/1/6/: 27l49urk74o93qd6n392v19odo2bd8cR  stats
.flatpak-builder/ccache/1/7/: 28scrcndma9hd3oh5l3tmknq0f8i0cgR  60nfqj9ckif88r97k3lb5r46k1t05doM
.flatpak-builder/ccache/1/9/: 9cvl0rjveuriq8knt8kn823fd9ups2qM
.flatpak-builder/ccache/1/a/: 06cvem79qjktj2cdufucvb4ij5ncvhiM  stats
.flatpak-builder/ccache/1/b/: 72ikh6ognqf65tg25uh9ucjeeemfiaoM
.flatpak-builder/ccache/1/c/: 35e20kaj9esabn39rhkggr222i4hgniM
.flatpak-builder/ccache/2/: stats
.flatpak-builder/ccache/3/: stats
.flatpak-builder/ccache/4/: stats
.flatpak-builder/ccache/5/: stats
.flatpak-builder/ccache/6/: stats
.flatpak-builder/ccache/7/: stats
.flatpak-builder/ccache/8/: stats
.flatpak-builder/ccache/9/: stats
.flatpak-builder/ccache/a/: stats
.flatpak-builder/ccache/b/: stats
.flatpak-builder/ccache/c/: stats
.flatpak-builder/ccache/d/: stats
.flatpak-builder/ccache/e/: stats
.flatpak-builder/ccache/f/: stats
.flatpak-builder/checksums/: x86_64-io.github.idevecore.CurrencyConverter.Devel.json  x86_64-io.github.idevecore.CurrencyConverter.json
.flatpak-builder/git/https_github.com_om06_google-currency.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_github.com_psf_requests.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_github.com_wention_BeautifulSoup4/: FETCH_HEAD  config
.flatpak-builder/git/https_github.com_wention_BeautifulSoup4.git/: config  shallow
.flatpak-builder/git/https_gitlab.gnome.org_jwestman_blueprint-compiler/: FETCH_HEAD  shallow
.flatpak/flatpak-builder/checksums/: x86_64-io.github.idevecore.CurrencyConverter.Devel.json
.github/workflows/: flatpak-builder.yml  flatpak.yml  main.yml
data/: currencyconverter.gresource.xml  io.github.idevecore.CurrencyConverter.appdata.xml.in  io.github.idevecore.CurrencyConverter.appdata.xml.in.in  io.github.idevecore.CurrencyConverter.desktop.in  io.github.idevecore.CurrencyConverter.desktop.in.in  io.github.idevecore.CurrencyConverter.gschema.xml  io.github.idevecore.CurrencyConverter.gschema.xml.in  io.github.idevecore.Valuta.appdata.xml.in.in  io.github.idevecore.Valuta.desktop.in.in  io.github.idevecore.Valuta.gschema.xml.in  io.github.idevecore.Valuta.service.in  meson.build  style.css
data/icons/: meson.build
data/ui/: window.blp
data/ui/components/: currency_row.blp  currency_selector.blp  preferences.blp
po/: LINGUAS  POTFILES  ar.po  be.po  bg.po  cs.po  currency-converter.pot  de.po  es.po  et.po  eu.po  fi.po  fr.po  he.po  hi.po  hr.po  ia.po  io.github.idevecore.CurrencyConverter.pot  io.github.idevecore.Valuta.pot  it.po  ja.po  ka.po  kk.po  kw.po  meson.build  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  ta.po  te.po  tr.po  uk.po  zh_Hans.po
po/currencies-name/: LINGUAS  es.po  meson.build  pt_BR.po
po/currency_names/: pt_BR.po
src/: about.py  actions.py  api.py  application.py  currencyconverter.gresource.xml  currencyconverter.in  define.in  main.py  meson.build  requests.py  settings.py  style.css  utils.py  valuta.gresource.xml  valuta.in  window.blp  window.py  window.ui
src/assets/: style.css
src/assets/icons/: meson.build
src/components/: __init__.py  currency_selector.py  preferences.py
src/components/currencies/: index.blp  main.py
src/components/currency_selector/: currency_selector.blp  currency_selector.py  index.blp
src/components/currency_selector_row/: currency_selector_row.blp  currency_selector_row.py  index.blp
src/components/graph_view/: graph_view.blp  graph_view.py
src/components/preferences/: index.blp  main.py  preferences.blp  preferences.py
src/components/shortcuts/: shortcuts.blp  shortcuts.py
src/components/theme_switcher/: theme_switcher.blp  theme_switcher.py
src/pages/: __init__.py
src/pages/convertion/: convertion.py  index.blp
src/search_provider/: meson.build  search_provider.in
(+702 files in other folders)
